# trinacria-s2n

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DartConfiguration.tcl  LICENSE  TrinacriaS2N.slnx
Tests/: CMakeLists.txt
Tests/resources/: NetNodeClassTestScript.lua  NodeClassTestScript.lua
Tests/resources/NetClassTest/: Enemy.lua  Net.lua  Player.lua  PlayerVariant.lua
Tests/src/: NetNodeTest.cpp  NetTest.cpp  NodeTest.cpp  main.cpp
TrinacriaS2N/: CMakeLists.txt
TrinacriaS2N/include/TrinacriaS2N/: BaseNode.h  Net.h  NetNode.h  Node.h  asserts.h  log.h
TrinacriaS2N/src/: BaseNode.cpp  Net.cpp  NetNode.cpp  Node.cpp
